# ncurses

./: meson.build
ncurses/: meson.build
ncurses/base/: meson.build
ncurses/tinfo/: meson.build
ncurses/trace/: meson.build
ncurses/tty/: meson.build
