sources += files(
    'lib_slkrefr.c',
    'lib_newwin.c',
    'lib_delwin.c',
    'lib_endwin.c',
    'keyok.c',
    'lib_set_term.c',
    'lib_clearok.c',
    'lib_scrollok.c',
    'nc_panel.c',
    'lib_chgat.c',
    'new_pair.c',
    'lib_addstr.c',
    'lib_overlay.c',
    'lib_insch.c',
    'version.c',
    'lib_slkset.c',
    'vsscanf.c',
    'lib_touch.c',
    'lib_slkatrset.c',
    'lib_hline.c',
    'lib_slkatr_set.c',
    'lib_slklab.c',
    'lib_scrreg.c',
    'lib_bkgd.c',
    'lib_dft_fgbg.c',
    'lib_newterm.c',
    'lib_slk.c',
    'use_window.c',
    'lib_winch.c',
    'lib_slkatron.c',
    'keybound.c',
    'lib_mvwin.c',
    'lib_slktouch.c',
    'lib_ungetch.c',
    'legacy_coding.c',
    'lib_wattron.c',
    'lib_insnstr.c',
    'lib_delch.c',
    'lib_nl.c',
    'key_defined.c',
    'lib_screen.c',
    'lib_insdel.c',
    'lib_isendwin.c',
    'lib_clear.c',
#    'sigaction.c',
    'tries.c',
    'lib_printw.c',
    'lib_window.c',
    'lib_mouse.c',
    'lib_scanw.c',
    'lib_color.c',
    'lib_redrawln.c',
    'lib_pad.c',
    'lib_initscr.c',
    'lib_slkclear.c',
    'wresize.c',
    'lib_getstr.c',
    'lib_echo.c',
    'lib_move.c',
    'lib_inchstr.c',
    'lib_addch.c',
    'lib_slkatrof.c',
    'lib_colorset.c',
    'lib_scroll.c',
    'lib_getch.c',
    'safe_sprintf.c',
    'lib_wattroff.c',
    'lib_beep.c',
    'lib_freeall.c',
    'lib_slkattr.c',
    'lib_instr.c',
    'lib_slkinit.c',
    'lib_vline.c',
    'lib_flash.c',
    'resizeterm.c',
    'define_key.c',
    'lib_clreol.c',
    'lib_immedok.c',
    'lib_clrbot.c',
    'lib_box.c',
    'lib_leaveok.c',
    'lib_slkcolor.c',
    'lib_restart.c',
    'lib_refresh.c',
    'lib_erase.c',
    'lib_driver.c',
)
