sources += files(
  'access.c',
  'add_tries.c',
  'alloc_entry.c',
  'alloc_ttype.c',
  'captoinfo.c',
  'comp_error.c',
  'comp_expand.c',
  'comp_hash.c',
  'comp_parse.c',
  'comp_scan.c',
  'db_iterator.c',
  'doalloc.c',
  'entries.c',
  'free_ttype.c',
  'getenv_num.c',
  'hashed_db.c',
  'home_terminfo.c',
  'init_keytry.c',
  'lib_acs.c',
  'lib_baudrate.c',
  'lib_cur_term.c',
  'lib_data.c',
  'lib_has_cap.c',
  'lib_kernel.c',
  'lib_longname.c',
  'lib_napms.c',
  'lib_options.c',
  'lib_print.c',
  'lib_raw.c',
  'lib_setup.c',
  'lib_termcap.c',
  'lib_termname.c',
  'lib_tgoto.c',
  'lib_ti.c',
  'lib_tparm.c',
  'lib_tputs.c',
  'lib_ttyflags.c',
  'make_hash.c',
  'make_keys.c',
  'name_match.c',
  'obsolete.c',
  'parse_entry.c',
  'read_entry.c',
  'read_termcap.c',
  'strings.c',
#  'tinfo_driver.c',
  'trim_sgr0.c',
  'use_screen.c',
  'write_entry.c',
)
